--- a/Implementacion/proySC/module/Org/view/org/roles-de-partes/index-ui.phtml
+++ b/Implementacion/proySC/module/Org/view/org/roles-de-partes/index-ui.phtml
@@ -366,8 +366,8 @@ function formularioPersona(isNew, data)
 			       allowBlank: false,
 			       columns: 2,
 			       items: [
-			               {boxLabel: 'Hombre', name: 'genero_persona', inputValue: 'H', checked: (isNew)?(false):( (data.genero_persona == 'H')?(true):(false) )},
-			               {boxLabel: 'Mujer', name: 'genero_persona', inputValue: 'M', checked: (isNew)?(false):( (data.genero_persona == 'M')?(true):(false) )}
+			               {boxLabel: 'Masculino', name: 'genero_persona', inputValue: 'M', checked: (isNew)?(false):( (data.genero_persona == 'M')?(true):(false) )},
+			               {boxLabel: 'Femenino', name: 'genero_persona', inputValue: 'F', checked: (isNew)?(false):( (data.genero_persona == 'F')?(true):(false) )}
 			       ]
 		       }
 		       
