--- a/Implementacion/proySC/module/Org/view/org/personas/index-ui.phtml
+++ b/Implementacion/proySC/module/Org/view/org/personas/index-ui.phtml
@@ -10,6 +10,105 @@ function hideBloque()
 
 function formularioPersona(isNew, data)
 {
+	var bloqueDocumentos = [];
+	var tieneDoc = false;
+	
+	if(!isNew)
+	{
+		if(data.documentos.length > 0)
+		{
+			tieneDoc = true;
+			for(var x=0; x<data.documentos.length; x++)
+			{
+				bloqueDocumentos.push({
+					xtype: 'container',
+					layout: 'form',
+					items:[
+					        {
+						       xtype: 'hidden',
+						       name: 'org_documento_id',
+						       value: data.documentos[x].org_documento_id
+					        },
+							{
+								xtype: 'textfield',
+								name: 'valor',
+								allowBlank: false,
+								value: data.documentos[x].valor,
+								fieldLabel: 'Numero'
+							},
+							{
+								xtype: 'combo',
+								forceSelection: true,
+								mode: 'local',
+								typeAhead: true,
+								displayField: 'nombre',
+								valueField: 'org_documento_tipo_codigo',
+								store: orgDocumentoTipoStore,
+								allowBlank: false,
+								value: data.documentos[x].org_documento_tipo_codigo,
+								name: 'org_documento_tipo_codigo',
+								fieldLabel: 'Tipo'
+							}
+					]
+				});
+			}
+		}
+		else//no tiene doc
+		{
+			bloqueDocumentos.push({
+				xtype: 'container',
+				layout: 'form',
+				items:[
+						{
+	           				xtype: 'textfield',
+	           				name: 'valor',
+	           				allowBlank: false,
+	           				fieldLabel: 'Numero'
+	           			},
+	           			{
+	           				xtype: 'combo',
+	           				forceSelection: true,
+	           				mode: 'local',
+	           				typeAhead: true,
+	           				displayField: 'nombre',
+	           				valueField: 'org_documento_tipo_codigo',
+	           				store: orgDocumentoTipoStore,
+	           				allowBlank: false,
+	           				name: 'org_documento_tipo_codigo',
+	           				fieldLabel: 'Tipo'
+	           			}
+				]
+			});
+		}
+	}
+	else
+	{
+		bloqueDocumentos.push({
+			xtype: 'container',
+			layout: 'form',
+			items:[
+					{
+           				xtype: 'textfield',
+           				name: 'valor',
+           				allowBlank: false,
+           				fieldLabel: 'Numero'
+           			},
+           			{
+           				xtype: 'combo',
+           				forceSelection: true,
+           				mode: 'local',
+           				typeAhead: true,
+           				displayField: 'nombre',
+           				valueField: 'org_documento_tipo_codigo',
+           				store: orgDocumentoTipoStore,
+           				allowBlank: false,
+           				name: 'org_documento_tipo_codigo',
+           				fieldLabel: 'Tipo'
+           			}
+			]
+		});
+	}
+	
 	return {
 		xtype: 'form',
 		title: (isNew)?('Agregar Persona'):('Editar Persona'),
@@ -41,26 +140,7 @@ function formularioPersona(isNew, data)
 		           xtype: 'fieldset',
 		           title: 'Documento',
 		           labelWidth: 75,
-		           items:[
-		           			{
-		           				xtype: 'textfield',
-		           				name: 'valor',
-		           				allowBlank: false,
-		           				fieldLabel: 'Numero'
-		           			},
-		           			{
-		           				xtype: 'combo',
-		           				forceSelection: true,
-		           				mode: 'local',
-		           				typeAhead: true,
-		           				displayField: 'nombre',
-		           				valueField: 'org_documento_tipo_codigo',
-		           				store: orgDocumentoTipoStore,
-		           				allowBlank: false,
-		           				name: 'org_documento_tipo_codigo',
-		           				fieldLabel: 'Tipo'
-		           			}
-		           ]
+		           items:bloqueDocumentos
 		       },	
 		       {
 			       fieldLabel: 'Fecha Nac.',
@@ -99,6 +179,29 @@ function formularioPersona(isNew, data)
 									       
 									       if(valores.org_parte_id)//si existe es edicion
 									       {
+									    	   var datosDocumentos = {};
+										       if(tieneDoc)
+										       {
+										    	 //si tiene doc , es edicion
+										    	   datosDocumentos.editados = [
+										    	       {
+										    	    	   org_documento_id: valores.org_documento_id,
+										    	    	   valor: valores.valor
+											    	   }
+												   ];
+										       }
+										       else
+										       {
+										    	 //si no tenia es agregado
+										    	   datosDocumentos.agregados = [
+										    	       {
+										    	    	   org_documento_tipo_codigo: valores.org_documento_tipo_codigo,
+										    	    	   valor: valores.valor
+											    	   }
+												   ];
+										       }
+
+										       
 									    	   Ajax.PostElement.request({
 												   url: baseURL + '/org/empresas/editar',
 												   success: function(response, opt){
@@ -110,7 +213,8 @@ function formularioPersona(isNew, data)
 														   'nombre': valores.nombre,
 														   'apellido': valores.apellido,
 														   'fechaDeNacimiento': (formatearFecha(valores.fecha_nac, 1)),
-														   'genero': (valores.checkBoxGr)?(valores.checkBoxGr.inputValue):(null)
+														   'genero': (valores.checkBoxGr)?(valores.checkBoxGr.inputValue):(null),
+														   'Documentos':datosDocumentos
 													   },
 													   'formulario': mainForm.id
 												   }
